# Synsip

./: .gitignore  AUTHORS  README  README.md  autogen.sh  configfile.cfg  configure.ac
config/: messageExample  synsip.conf
scripts/: annonce.sh  init  messageExample
src/: Call_Manager.c  Call_Manager.h  Call_manager.cpp  Call_manager.h  Config_parser.cpp  Config_parser.h  Files_manager.cpp  Files_manager.h  HP_manager.cpp  HP_manager.h  Makefile.am  Message_manager.cpp  Message_manager.h  Network_manager.cpp  Network_manager.h  Synthesis_manager.cpp  Synthesis_manager.h  Thread.cpp  Thread.h  Timeout_manager.cpp  Timeout_manager.h  config.h  freeze_monitor.cpp  freeze_monitor.h  include.h  main.cc  main.cpp  queue.c  queue.h
