AC_INIT(synsip, 0.2.0)
AC_CONFIG_SRCDIR(src/main.cpp)
AM_INIT_AUTOMAKE

PJSIP_REQUIRED_VERSION=2.7
PKG_CHECK_MODULES(libpjproject, libpjproject >= $PJSIP_REQUIRED_VERSION)
AC_SUBST(SYNSIP_CFLAGS)
AC_SUBST(SYNSIP_CXXFLAGS)
AC_SUBST(SYNSIP_LIBS)

SYNSIP_CFLAGS=${libpjproject_CFLAGS}
SYNSIP_CXXFLAGS=${libpjproject_CFLAGS}
SYNSIP_LIBS=${libpjproject_LIBS}

ACX_PTHREAD
SYNSIP_LIBS="$PTHREAD_LIBS $SYNSIP_LIBS"
SYNSIP_CXXFLAGS="$SYNSIP_CXXFLAGS $PTHREAD_CFLAGS"
if test "x$ac_cv_c_bigendian" = "xyes"; then
  SYNSIP_CFLAGS="$SYNSIP_CFLAGS $PTHREAD_CFLAGS -DPJ_IS_BIG_ENDIAN=1 -DPJ_IS_LITTLE_ENDIAN=0"
else
  SYNSIP_CFLAGS="$SYNSIP_CFLAGS $PTHREAD_CFLAGS -DPJ_IS_BIG_ENDIAN=0 -DPJ_IS_LITTLE_ENDIAN=1"
fi
CC="$PTHREAD_CC"

C11="OK"
AX_CHECK_COMPILE_FLAG([-std=c++11], [CXXFLAGS="$CXXFLAGS -std=c++11"], C11="NO")
if test "$C11" = "NO"; then
	AX_CHECK_COMPILE_FLAG([-std=c++0x], [CXXFLAGS="$CXXFLAGS -std=c++0x"], echo "C++11 or C++0x mandatory"; exit)
fi

CXXFLAGS="$CXXFLAGS -g"

AC_PROG_CXX
AC_PROG_CC

AC_OUTPUT(Makefile src/Makefile)
