bin_PROGRAMS = synsip

AM_CXXFLAGS = $(SYNSIP_CXXFLAGS)
AM_CFLAGS = $(SYNSIP_CFLAGS)

synsip_SOURCES = Call_Manager.c Call_Manager.h main.cc Message_manager.cpp Message_manager.h Network_manager.cpp Network_manager.h Synthesis_manager.cpp Synthesis_manager.h Thread.cpp Thread.h queue.c queue.h
synsip_LDADD = $(SYNSIP_LIBS)

