bin_PROGRAMS = synsip

AM_CXXFLAGS = $(SYNSIP_CXXFLAGS)
AM_CFLAGS = $(SYNSIP_CFLAGS)

synsip_SOURCES = Call_manager.cpp Call_manager.h HP_manager.cpp HP_manager.h main.cpp Message_manager.cpp Message_manager.h Network_manager.cpp Network_manager.h Synthesis_manager.cpp Synthesis_manager.h Thread.cpp Thread.h
synsip_LDADD = $(SYNSIP_LIBS)

