bin_PROGRAMS = synsip

AM_CXXFLAGS = $(SYNSIP_CXXFLAGS)
AM_CFLAGS = $(SYNSIP_CFLAGS)

synsip_SOURCES = Call_manager.cpp Call_manager.h Config_parser.cpp Config_parser.h HP_manager.cpp HP_manager.h main.cpp Message_manager.cpp Message_manager.h Network_manager.cpp Network_manager.h Synthesis_manager.cpp Synthesis_manager.h Thread.cpp Thread.h Timeout_manager.cpp Timeout_manager.h Files_manager.h Files_manager.cpp
synsip_LDADD = $(SYNSIP_LIBS)

